# papertrail

./: .buildinfo  .pre-commit-config.yaml  README.md  genindex.html  index.html  modules.html  objects.inv  papertrail.adapters.html  papertrail.adapters.io_funcs.html  papertrail.core.collection.example.html  papertrail.core.collection.html  papertrail.core.collection.record.html  papertrail.core.collection.recorder.html  papertrail.core.html  papertrail.core.logger.html  papertrail.core.transformation.ast_editing.html  papertrail.core.transformation.format_examples.html  papertrail.core.transformation.html  papertrail.core.transformation.transform.html  papertrail.html  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  papertrail.adapters.doctree  papertrail.adapters.io_funcs.doctree  papertrail.core.collection.doctree  papertrail.core.collection.example.doctree  papertrail.core.collection.record.doctree  papertrail.core.collection.recorder.doctree  papertrail.core.doctree  papertrail.core.logger.doctree  papertrail.core.transformation.ast_editing.doctree  papertrail.core.transformation.doctree  papertrail.core.transformation.format_examples.doctree  papertrail.core.transformation.transform.doctree  papertrail.doctree
_sources/: index.rst.txt  modules.rst.txt  papertrail.adapters.io_funcs.rst.txt  papertrail.adapters.rst.txt  papertrail.core.collection.example.rst.txt  papertrail.core.collection.record.rst.txt  papertrail.core.collection.recorder.rst.txt  papertrail.core.collection.rst.txt  papertrail.core.rst.txt  (+6 more)
(+32 files in other folders)
