[project]
name = "papertrail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ed cuss", email = "edcussmusic@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
papertrail = "papertrail:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "repo-mapper-rs>=0.4.0",
    "ruff>=0.14.14",
]
